// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`src/containers/Document/PurchaseOrder/Detail-v2/NewInstall/GameQoo render properly 1`] = `
<React.Fragment>
  <Detail
    action={Array []}
    breadcrumb={
      Array [
        Object {
          "label": "Purchase Order",
          "url": "/dashboard/purchase-order",
        },
        Object {
          "label": undefined,
        },
      ]
    }
    filter={Array []}
    loading={true}
    notFound={false}
    otherStatus={null}
    schema={
      Array [
        Object {
          "content": Array [
            Object {
              "properties": Object {
                "data": Object {},
                "schema": Array [
                  Object {
                    "label": "ORDER ID",
                    "name": "orderNumber",
                  },
                  Object {
                    "converter": [Function],
                    "label": "PURCHASE DATE",
                    "name": "createdAt",
                  },
                  Object {
                    "label": "BAKES NUMBER",
                    "name": "bakesNumber",
                  },
                  Object {
                    "label": "CUSTOMER",
                    "name": "custAccntName",
                  },
                  Object {
                    "label": "Product Category",
                    "name": "categoryName",
                  },
                  Object {
                    "label": "Order Type",
                    "name": "orderType",
                  },
                  Object {
                    "label": "Product",
                    "name": "productName",
                  },
                  Object {
                    "label": "GameQoo Pack",
                    "name": "packages.packageName",
                  },
                  Object {
                    "label": "GameQoo Games",
                    "name": "packages.description",
                  },
                  Object {
                    "label": "GameQoo Quantity",
                    "name": "packages.quantity",
                  },
                  Object {
                    "label": "GameQoo Price",
                    "name": "packages.price",
                  },
                  Object {
                    "label": "Discount",
                    "name": "discount",
                  },
                ],
              },
              "title": "Order Information",
              "type": "information",
            },
            Object {
              "hidden": false,
              "properties": Object {
                "data": Object {},
                "schema": Array [
                  Object {
                    "label": "Purchase Order",
                    "name": "documentPO",
                  },
                  Object {
                    "label": "BAKES",
                    "name": "bakesFile",
                  },
                  Object {
                    "label": "BASO",
                    "name": "activationDoc",
                  },
                  Object {
                    "label": "Additional File",
                    "name": "additionalFile",
                  },
                ],
              },
              "title": "Document Attachment",
              "type": "attachment",
            },
          ],
          "gridProps": Object {
            "md": 6,
            "xs": 12,
          },
        },
        Object {
          "content": Array [
            Object {
              "properties": Object {
                "active": 0,
                "errors": undefined,
                "errorsLabel": undefined,
                "steps": Array [
                  "Submitted",
                  "AM Approval",
                  "Delivery Approval",
                  "Provisioning",
                  "BASO Signed",
                  "Completed",
                ],
              },
              "title": "Purchase Order Approval Step",
              "type": "stepper",
            },
            Object {
              "properties": Object {
                "data": undefined,
              },
              "title": "History Work Log",
              "type": "worklog",
            },
          ],
          "gridProps": Object {
            "md": 6,
            "xs": 12,
          },
          "stickRight": true,
        },
      ]
    }
    search={null}
    status={
      Object {
        "children": undefined,
        "variant": undefined,
      }
    }
    tabs={
      Object {
        "onChange": [Function],
        "options": Array [],
        "value": "",
      }
    }
    withTopDivider={true}
  />
  <Component
    content={null}
  />
  <Component
    content={null}
  />
  <Component
    content={null}
    productName="Gameqoo"
  />
  <Component
    modalProgressUpload={null}
    progress={0}
  />
</React.Fragment>
`;

exports[`src/containers/Document/PurchaseOrder/Detail-v2/NewInstall/GameQoo render properly product smarthand 1`] = `
<React.Fragment>
  <Detail
    action={Array []}
    breadcrumb={
      Array [
        Object {
          "label": "Purchase Order",
          "url": "/dashboard/purchase-order",
        },
        Object {
          "label": undefined,
        },
      ]
    }
    filter={Array []}
    loading={true}
    notFound={false}
    otherStatus={null}
    schema={
      Array [
        Object {
          "content": Array [
            Object {
              "properties": Object {
                "data": Object {},
                "schema": Array [
                  Object {
                    "label": "ORDER ID",
                    "name": "orderNumber",
                  },
                  Object {
                    "converter": [Function],
                    "label": "PURCHASE DATE",
                    "name": "createdAt",
                  },
                  Object {
                    "label": "BAKES NUMBER",
                    "name": "bakesNumber",
                  },
                  Object {
                    "label": "CUSTOMER",
                    "name": "custAccntName",
                  },
                  Object {
                    "label": "Product Category",
                    "name": "categoryName",
                  },
                  Object {
                    "label": "Order Type",
                    "name": "orderType",
                  },
                  Object {
                    "label": "SID",
                    "name": "sidNeucentrix",
                  },
                  Object {
                    "label": "Location",
                    "name": "locationNeucentrix",
                  },
                  Object {
                    "label": "Product",
                    "name": "productName",
                  },
                  Object {
                    "label": "Smarthand Pack",
                    "name": "smarthandPack",
                  },
                  Object {
                    "converter": [Function],
                    "label": "Total Activities",
                    "name": "totalActivities",
                  },
                  Object {
                    "converter": [Function],
                    "label": "Quantity",
                    "name": "quantity",
                  },
                  Object {
                    "label": "Discount",
                    "name": "discount",
                  },
                  Object {
                    "converter": [Function],
                    "label": "Total Price",
                    "name": "grandTotal",
                  },
                ],
              },
              "title": "Order Information",
              "type": "information",
            },
            Object {
              "hidden": false,
              "properties": Object {
                "data": Object {},
                "schema": Array [
                  Object {
                    "label": "Purchase Order",
                    "name": "documentPO",
                  },
                  Object {
                    "label": "BAKES",
                    "name": "bakesFile",
                  },
                  Object {
                    "label": "Order Confirmation",
                    "name": "activationDoc",
                  },
                  Object {
                    "label": "Additional File",
                    "name": "additionalFile",
                  },
                ],
              },
              "title": "Document Attachment",
              "type": "attachment",
            },
          ],
          "gridProps": Object {
            "md": 6,
            "xs": 12,
          },
        },
        Object {
          "content": Array [
            Object {
              "properties": Object {
                "active": 0,
                "errors": undefined,
                "errorsLabel": undefined,
                "steps": Array [
                  "Submitted",
                  "AM Approval",
                  "Delivery Approval",
                  "Provisioning",
                  "Confirmation",
                  "Completed",
                ],
              },
              "title": "Purchase Order Approval Step",
              "type": "stepper",
            },
            Object {
              "properties": Object {
                "data": undefined,
              },
              "title": "History Work Log",
              "type": "worklog",
            },
          ],
          "gridProps": Object {
            "md": 6,
            "xs": 12,
          },
          "stickRight": true,
        },
      ]
    }
    search={null}
    status={
      Object {
        "children": undefined,
        "variant": undefined,
      }
    }
    tabs={
      Object {
        "onChange": [Function],
        "options": Array [],
        "value": "",
      }
    }
    withTopDivider={true}
  />
  <Component
    content={null}
  />
  <Component
    content={null}
  />
  <Component
    content={null}
    productName="Smarthand"
  />
  <Component
    modalProgressUpload={null}
    progress={0}
  />
</React.Fragment>
`;
